--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "chit -r"
   },
   "dependencies": {
-    "underscore": "1.x.x"
+    "underscore": "1.x.x",
+    "instance-of": "1.x.x"
   },
   "devDependencies": {
     "chit": "0.x.x"
