--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "underscore": "1.x.x",
-    "instance-of": "1.x.x"
+    "instance-of": "1.x.x",
+    "dot-object": "0.x.x"
   },
   "devDependencies": {
     "chit": "0.x.x"
