--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "chit -r"
   },
   "dependencies": {
-    "chix-group": "^1.0.0",
-    "dot-object": "0.x.x",
+    "chix-group": "^2.1.0",
+    "dot-object": "^1.5.0",
     "instance-of": "1.x.x",
     "underscore": "1.x.x"
   },
